--- a/package.json
+++ b/package.json
@@ -7,14 +7,6 @@
     "type-check": "tsc --pretty --noEmit",
     "format": "prettier --write .",
     "lint": "eslint . --ext ts --ext tsx --ext js",
-    "test": "jest",
-    "test-all": "yarn lint && yarn type-check && yarn test"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "pre-push": "yarn run type-check"
-    }
   },
   "lint-staged": {
     "*.@(ts|tsx)": [
@@ -23,7 +15,8 @@
     ]
   },
   "dependencies": {
-    "@walletconnect/web3-provider": "^1.6.6",
+    "@walletconnect/web3-provider": "^1.7.8",
+    "axios": "^0.27.2",
     "ethers": "^5.5.1",
     "next": "latest",
     "react": "^17.0.2",
