--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "b2fa",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -6,7 +7,7 @@
     "start": "next start",
     "type-check": "tsc --pretty --noEmit",
     "format": "prettier --write .",
-    "lint": "eslint . --ext ts --ext tsx --ext js",
+    "lint": "eslint . --ext ts --ext tsx --ext js"
   },
   "lint-staged": {
     "*.@(ts|tsx)": [
