--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,16 +32,10 @@
     "@typescript-eslint/no-explicit-any": 0,
     "@typescript-eslint/no-var-requires": 0,
     "@typescript-eslint/no-use-before-define": 0,
-    "@typescript-eslint/no-unused-vars": [
-      2,
-      {
-        "argsIgnorePattern": "^_"
-      }
-    ],
     "no-console": [
       2,
       {
-        "allow": ["warn", "error"]
+        "allow": ["log", "warn", "error"]
       }
     ]
   }
